# event_planner

./: README.md  pyproject.toml
event_planner/: settings.py  urls.py
event_reminders/: apps.py  integration_tests.py  models.py  serializers.py  urls.py  views.py
event_reminders/migrations/: 0001_initial.py
events_app/: models.py  serializers.py  tests.py  urls.py  views.py
events_app/migrations/: 0001_initial.py  0002_event_location_alter_event_date_and_more.py
